# tap-2016

./: .gitignore  LICENSE  dev-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt
tap/problemaa/: solucion.py
tap/problemae/: solucion.py
tap/problemaf/: solucion.py
tap/problemak/: solucion.py
tap/problemal/: solucion.py
tests/: test_problemaa.py  test_problemae.py  test_problemaf.py  test_problemak.py  test_problemal.py
