[project]
name = "tap-2016"
version = "2016.0.0"
description = "Resolución de ejericios pertenecientes al Torneo Argentino de Programación 2016"
readme = "README.rst"
requires-python = ">=3.5"
license = { file = "LICENSE" }
keywords = ["torneo", "argentina", "programación"]
authors = [{ name = "Sebastián Seba" }]
maintainers = [{ name = "Sebastián Seba" }]
classifiers = ["Programming Language :: Python"]

dependencies = []

[project.optional-dependencies]
test = ["pytest >= 7.2.0", "pytest-cov[all] >= 4.0.0"]
dev = ["black", "flake8"]

[project.urls]
repository = "https://github.com/ssebastianj/tap-2016/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
